updated method to use Java 8 method